# pii-cleaner-workshop

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  next-steps-ideas.md  pyproject.toml
.github/workflows/: ci.yml
config/: tenants.example.yaml
docs/: SPEC.md  WORKSHOP-USECASES.md
helm/pii-cleaner/: Chart.yaml  values.yaml
helm/pii-cleaner/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
src/pii_cleaner/: errors.py  main.py
src/pii_cleaner/api/: routes_clean.py  routes_health.py  routes_records.py  schemas.py
src/pii_cleaner/auth/: keys.py  middleware.py
src/pii_cleaner/config/: settings.py
src/pii_cleaner/core/: analyzer.py  cleaner.py  policy.py
src/pii_cleaner/observability/: audit.py  logging.py  metrics.py  tracing.py
src/pii_cleaner/ratelimit/: token_bucket.py
tests/: conftest.py
tests/integration/: test_api.py  test_no_pii_in_logs.py
tests/unit/: test_audit.py  test_auth.py  test_cleaner.py  test_config_settings.py  test_policy.py  test_ratelimit.py
